<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Typos"
    formatted="false">
    <string name="app_name">ALL 4 OCEAN</string>
    <string name="curiosidade">EXISTEM LAGOS E RIOS ABAIXO DA SUPERFÍCIE DO OCEANO Algumas superfícies no oceano apresentam visões que não parecem fazer nenhum sentido lógico – rios e lagos, alguns deles com quilômetros de extensão, podem se estender pelo solo mesmo estando submersos. Como pode uma massa de água existir em uma massa de água? A água do fundo do mar infiltra-se e dissolve as camadas de sal, formando depressões. Como a água na depressão é mais densa do que a água ao seu redor, ela se acomoda na depressão e forma uma piscina distinta</string>
    <string name="voce_sabia">Você Sabia?</string>
    <string name="come_ar">Começar</string>
    <string name="vamos_atualizar_o_seu_cadastro">Vamos atualizar o seu Cadastro</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="salvar">Salvar</string>
    <string name="como_eu_posso_ajudar">Como eu Posso Ajudar?</string>
    <string name="informacoes_como_ajudar">Aqui estão algumas maneiras de ajudar a Economia Azul:\n
        Reduza o uso de plástico descartável:\n
        \n
        Evite produtos plásticos de uso único, como canudos, sacolas e garrafas.\n
        Adote alternativas reutilizáveis, como garrafas de água, sacolas de tecido e utensílios de metal.\n
        Participe de iniciativas de limpeza costeira:\n
        \n
        Junte-se a grupos locais para limpar praias, rios e áreas costeiras.\n
        Organize eventos de limpeza em sua comunidade para envolver mais pessoas.\n
        Apoie empresas e produtos sustentáveis:\n
        \n
        Prefira comprar de empresas que adotam práticas sustentáveis e respeitam o meio ambiente.\n
        Escolha produtos feitos de materiais reciclados ou biodegradáveis.\n
        Eduque-se sobre os oceanos e sua importância para o planeta:\n
        \n
        Aprenda sobre os ecossistemas marinhos e a biodiversidade dos oceanos.\n
        Participe de palestras, workshops e cursos sobre conservação marinha.\n
        Contribua para organizações de conservação marinha:\n
        \n
        Doe para ONGs e instituições que trabalham na preservação dos oceanos.\n
        Voluntarie-se em projetos de conservação e pesquisa marinha.\n
        Pratique pesca sustentável:\n
        \n
        Siga as regulamentações locais de pesca para evitar a sobrepesca.\n
        Consuma peixes e frutos do mar de fontes sustentáveis e certificadas.\n
        Promova a conscientização sobre a importância dos oceanos para a vida na Terra:\n
        \n
        Compartilhe informações sobre a importância dos oceanos nas redes sociais.\n
        Envolva sua comunidade em discussões sobre conservação marinha e proteção ambiental.</string>
    <string name="home">Início</string>
    <string name="buscar">Buscar</string>
    <string name="atulizar_cadastro">Atualizar Cadastro</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmacao_senha">Confirmação de Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="voltar">Voltar</string>
    <string name="_25_curiosidades_sobre_os_oceanos">25 CURIOSIDADES SOBRE OS OCEANOS</string>
    <string name="Curiosidade">Curiosidade</string>
    <string name="sobre">Sobre</string>
    <string name="ajudar">como ajudar</string>
    <string name="sair">Sair</string>
    <string name="ajude_a_cuidar_dos_nossos_oceanos">Ajude a cuidar dos nossos oceanos!!</string>
    <string name="bem_vindo">Bem-Vindo</string>
    <string name="esqueci_a_senha">Esqueci a Senha</string>
    <string name="entrar">Entrar</string>
    <string name="enviar">Enviar</string>
    <string name="projeto_all4ocean">Projeto: All4Ocean</string>
    <string name="economia_azul_informa">Economia Azul: Informações sobre a Economia Azul aqui…</string>
    <string name="preencha_todos_os_campos">Preencha todos os campos!!</string>
    <string name="email_invalido">Email inválido!!</string>
    <string name="email_exemplo">Exemplo de email: usuario@gmail.com</string>
    <string name="senhas_diferentes">As senhas devem ser iguais!!</string>
    <string name="senha_curta">A senha deve ter pelo menos 6 caracteres</string>
    <string name="cadastro_sucesso">Cadastro realizado com sucesso</string>
    <string name="usuario_cadastrado">Usuário já cadastrado</string>
    <string name="ok">OK</string>
    <string name="curiosidade_texto">Descubra fatos fascinantes sobre os oceanos e sua importância para a vida na Terra.</string>
    <string name="curiosidade_titulo">Curiosidades dos Oceanos</string>
    <string name="curiosidade_1">Curiosidade 1:\n Os oceanos cobrem 71% da superfície da Terra, desempenhando um papel vital para a saúde do nosso planeta.</string>
    <string name="curiosidade_2">Curiosidade 2: \nOs oceanos abrigam a maior parte da vida na Terra, com cerca de 94% das espécies vivendo em seus vastos domínios.</string>
    <string name="curiosidade_3">Curiosidade 3: \nOs oceanos são responsáveis por mais de 50% do oxigênio que respiramos, atuando como os pulmões do nosso planeta.</string>
    <string name="curiosidade_4">Curiosidade 4: \nMais artefatos históricos estão submersos nos oceanos do que em todos os museus do mundo, contando silenciosamente as histórias do nosso passado.</string>
    <string name="curiosidade_5">Curiosidade 5: \nA majestosa baleia azul, o maior animal do mundo, chama os oceanos de lar, lembrando-nos da grandiosidade desses ambientes.</string>
    <string name="curiosidade_6">Curiosidade 6: \nMenos de 5% dos oceanos foram explorados, deixando vastas áreas desconhecidas e repletas de mistérios a serem descobertos.</string>
    <string name="curiosidade_7">Curiosidade 7: \nAs correntes oceânicas são como as artérias do nosso planeta, transportando calor e nutrientes essenciais ao redor do globo.</string>
    <string name="curiosidade_8">Curiosidade 8: \nOs recifes de coral são verdadeiros oásis de biodiversidade, fornecendo habitats cruciais para uma miríade de espécies marinhas.</string>
    <string name="curiosidade_9">Curiosidade 9: \nNas profundezas dos oceanos, há uma reserva estimada de mais de 20 milhões de toneladas de ouro, um tesouro oculto que desafia nossa compreensão.</string>
    <string name="curiosidade_10">Curiosidade 10: \nA Fossa das Marianas, com seus impressionantes 11.034 metros de profundidade, é o ponto mais baixo da Terra, revelando a magnitude das profundezas oceânicas.</string>
    <string name="curiosidade_11">Curiosidade 11: \nA temperatura da água do mar desempenha um papel fundamental na regulação do clima global, influenciando desde fenômenos climáticos até padrões de circulação oceânica.</string>
    <string name="curiosidade_12">Curiosidade 12: \nSob as ondas, está uma cordilheira submarina majestosa e colossal, rivalizando em grandeza com as mais altas montanhas terrestres.</string>
    <string name="curiosidade_13">Curiosidade 13: \nAs medusas, antigas e delicadas, existem há mais de 500 milhões de anos, testemunhando a longevidade e a diversidade dos oceanos.</string>
    <string name="curiosidade_14">Curiosidade 14: \nNa profundidade dos oceanos, o som viaja cinco vezes mais rápido na água do que no ar, criando um ambiente acústico único para a vida marinha.</string>
    <string name="curiosidade_15">Curiosidade 15: \nSob as ondas, lagos e rios subaquáticos formam paisagens surreais, oferecendo habitats peculiares para uma variedade de espécies.</string>
    <string name="curiosidade_16">Curiosidade 16: \nOs oceanos abrigam mais de 90% do habitat disponível para a vida na Terra, sustentando ecossistemas complexos que regulam o clima e fornecem recursos vitais.</string>
    <string name="curiosidade_17">Curiosidade 17: \nTsunamis são poderosas ondas causadas por terremotos submarinos, capazes de desencadear devastação em áreas costeiras, demonstrando a força dos oceanos.</string>
    <string name="curiosidade_18">Curiosidade 18: \nO derretimento do gelo marinho no Ártico é um indicador alarmante das mudanças climáticas globais, afetando não apenas a vida polar, mas também os padrões climáticos em escala global.</string>
    <string name="curiosidade_19">Curiosidade 19: \nO peixe-boi, um herbívoro gentil, é essencial para a saúde dos ecossistemas costeiros, destacando a importância da conservação desses mamíferos marinhos.</string>
    <string name="curiosidade_20">Curiosidade 20: \nVulcões submarinos ativos moldam paisagens submarinas únicas, proporcionando habitats vitaispara uma variedade de criaturas marinhas, e até mesmo formando novas ilhas quando entram em erupção.</string>
    <string name="curiosidade_21">Curiosidade 21: \nAs águas oceânicas são compostas por 3,5% de sal, um testemunho da longa história de interação entre os oceanos e os continentes.</string>
    <string name="curiosidade_22">Curiosidade 22: \nA biodiversidade dos oceanos é verdadeiramente extraordinária e ainda em grande parte desconhecida, oferecendo um vasto reino de descoberta e exploração.</string>
    <string name="curiosidade_23">Curiosidade 23: \nO krill, um pequeno crustáceo, é uma pedra angular na teia alimentar marinha, alimentando desde as maiores baleias até os mais pequenos peixes e aves marinhas.</string>
    <string name="curiosidade_24">Curiosidade 24: \nO som das ondas é principalmente gerado pelo vento, criando uma sinfonia constante que ecoa através dos vastos horizontes dos oceanos.</string>
    <string name="curiosidade_25">Curiosidade 25: \nO papel do oceano no ciclo da água é fundamental, influenciando processos de evaporação, precipitação e circulação que afetam o clima global e a vida em todo o planeta.</string>
    <string name="detalhe_curiosidade_1" formatted="false">Detalhe da Curiosidade 1: \n\n Os oceanos, em sua distribuição, apresentam um notável desequilíbrio, com a maior parte da água concentrada no hemisfério sul, cobrindo cerca de 80% da superfície do globo. Esse padrão desigual contribui para uma rica e variada tapeçaria de ecossistemas marinhos, abrangendo desde as gélidas águas antárticas até os quentes e tropicais recifes de coral.\n
        \n
        No hemisfério sul, o Oceano Antártico envolve o continente gelado da Antártica, proporcionando suporte vital para uma biodiversidade única. Aqui, encontramos uma miríade de espécies, incluindo pinguins, focas e diversas baleias, adaptadas a condições extremas e que dependem desse ambiente para sobreviver.\n
        \n
        Já mais ao norte, os oceanos Índico e Pacífico Sul abrigam alguns dos mais vibrantes recifes de coral do mundo, como a renomada Grande Barreira de Coral na Austrália. Este é o maior sistema de recifes de coral do planeta, um verdadeiro tesouro marinho que sustenta uma infinidade de espécies marinhas, desde peixes coloridos até imponentes tubarões.\n
        \n
        Além de sua importância biológica, essa concentração de água no hemisfério sul exerce uma influência vital no clima global, afetando padrões climáticos em todo o mundo. Além disso, esses ecossistemas marinhos sustentam comunidades humanas inteiras, fornecendo recursos essenciais como alimentos, transporte e recreação. Portanto, a preservação e a conservação desses ecossistemas são cruciais não apenas para a vida marinha, mas também para o bem-estar e a subsistência das pessoas que dependem deles.</string>
</resources>