<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cc">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/aa"
        android:gravity="center"
        android:text="@string/como_eu_posso_ajudar"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewInformacoes"
        android:layout_width="match_parent"
        android:layout_height="455dp"
        android:layout_below="@id/textViewTitulo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/ee"
        android:textColor="@color/white"
        android:text="@string/informacoes_como_ajudar"
        android:textSize="18sp" />

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/background_toolbar" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="73dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="166dp"
        android:layout_marginBottom="6dp"
        android:src="@drawable/ic_home"
        android:contentDescription="@string/home" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="49dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="6dp"
        android:src="@drawable/ic_buscar_search"
        android:contentDescription="@string/buscar" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="59dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="7dp"
        android:src="@drawable/ic_baseline"
        android:contentDescription="@string/atulizar_cadastro" />

</RelativeLayout>
