<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cc">


    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/sobre"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewProjeto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitulo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/projeto_all4ocean"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewEconomiaAzul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewProjeto"
        android:layout_marginStart="16dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:text="@string/economia_azul_informa"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="145dp"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:text="@string/voltar" />

</RelativeLayout>
