<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ee">


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_edittext"
        android:drawableEnd="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_edittext"
        android:drawableEnd="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="12dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_edittext"
        android:drawableEnd="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/confirmacao_senha"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextPassword2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="145dp"
        android:background="@drawable/button"
        android:text="@string/cadastrar" />

    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="145dp"
        android:background="@drawable/button"
        android:drawableStart="@drawable/ic_arrow_back_ios_24"
        android:text="@string/voltar" />

</RelativeLayout>