<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cc">


    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/images" />

    <Button
        android:id="@+id/Curiosidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_button2"
        android:text="@string/Curiosidade"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/Sobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="49dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="42dp"
        android:layout_toStartOf="@+id/ComoAjudar"
        android:layout_toEndOf="@+id/Curiosidades"
        android:background="@drawable/background_button2"
        android:text="@string/sobre"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/ComoAjudar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/background_button2"
        android:text="@string/ajudar"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="19dp"
        android:drawableStart="@drawable/ic_arrow_back_ios_24"
        android:text="@string/sair"
        android:textColor="@color/white"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="96dp"
        android:layout_marginTop="38dp"
        android:text="@string/ajude_a_cuidar_dos_nossos_oceanos"
        android:textColor="@color/white" />

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/background_toolbar" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="73dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="177dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="6dp"
        android:src="@drawable/ic_home" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="49dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="6dp"
        android:src="@drawable/ic_buscar_search" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="59dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="7dp"
        android:src="@drawable/ic_baseline" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="178dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="165dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:text="@string/bem_vindo"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="178dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="165dp"
        android:text=""
        android:textColor="@color/white" />

</RelativeLayout>